# satelit-scheduler

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
config/: default.toml
docker/app/: Dockerfile  README.md
docker/app/scripts/: build-project.sh  entry.sh
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2019-08-06-115326_initial/: down.sql  up.sql
scripts/: fmt.sh
src/: block.rs  db.rs  lib.rs  main.rs  plan.rs  proto.rs  settings.rs  state.rs
src/db/: entity.rs  import.rs  index.rs  schema.rs
src/db/entity/: convert.rs
src/plan/: import.rs  index.rs  scrape.rs
src/proto/: import.rs  scraping.rs  uuid.rs
src/settings/: template.rs
src/state/: import.rs  index.rs  scrape.rs
tools/: cq.fish  db.fish  docker.fish
