[package]
name = "satelit-scheduler"
version = "0.1.0"
authors = ["Igor Nikitin <rabbitinspace@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
config = "0.9.3"

serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"

diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.7"

futures = "0.1.28"
tokio = "0.1.22"
tokio-threadpool = "0.1.15"

tower-grpc = "0.1.0"
tower-hyper = "0.1.0"
reqwest = "0.9.19"

prost = "0.5.0"
bytes = "0.4.12"
