[package]
name = "satelit-scheduler"
version = "0.1.0"
authors = ["Igor Nikitin <rabbitinspace@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4.7"
config = "0.9.3"
uuid = { version = "0.7.4", features = ["v4"] }

serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.40"

diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.7"

futures = "0.1.28"
tokio = "0.1.22"
rayon = "1.1.0"
lazy_static = "1.3.0"

tower = "0.1.1"
tower-grpc = "0.1.0"
tower-hyper = "0.1.1"
hyper = "0.12.33"
reqwest = "0.9.19"

prost = "0.5.0"
bytes = "0.4.12"
