[package]
name = "satelit-scheduler"
version = "0.1.0"
authors = ["Igor Nikitin <rabbitinspace@icloud.com>"]
edition = "2018"

[dependencies]
tracing = "0.1.11"
tracing-futures = "0.2.0"
tracing-subscriber = "0.2.0-alpha.2"
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.59"
tinytemplate = "1.0.3"

diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.10"
openssl = "*"

futures = "0.3.1"
tokio = { version = "0.2.6", features = ["full"] }

tonic = "0.1.0"
reqwest = { version = "0.10.0", default-features = false, features = ["json"] }
prost = "0.6.0"

[patch.crates-io]
prost = { git = "https://github.com/satelit-project/prost.git", branch = "satelit" }
prost-derive = { git = "https://github.com/satelit-project/prost.git", branch = "satelit" }
tonic = { git = "https://github.com/satelit-project/tonic.git", branch = "satelit" }
